update package json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "szymongos.github.io",
   "homepage": "https://szymongos.github.io",
   "private": true,
   "version": "0.0.0",
